# openstack-neutron-ml2-dummy-driver

./: README.md  requirements.txt  setup.cfg  setup.py
dummyml2/drivers/: mech_dummy.py  type_dummy.py
dummyml2/lib/: interceptor.py
