[metadata]
name = dummyml2
version = 0.0.1
description = OpenStack Neutron ML2 "Dummy" drivers
summary = OpenStack Neutron ML2 "Dummy" drivers
author = momijiame
author_email = amedama.ginmokusei@gmail.com
url = https://github.com/momijiame/dummy-ml2-drivers
classifier =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[bdist_rpm]
release = 1
packager = @momijiame
requires = openstack-neutron-ml2

[entry_points]
neutron.ml2.type_drivers =
	dummytype = dummyml2.drivers.type_dummy:DummyTypeDriver
neutron.ml2.mechanism_drivers =
	dummymech = dummyml2.drivers.mech_dummy:DummyMechanismDriver
